# PRANAG-AI

./: .gitignore  README.md
JAY/: .env.example  pyproject.toml  requirements.txt
JAY/orchestrator/: output_validator.py  prompt_parser.py  research_fetcher.py  spec_builder.py  workflow.py
JAY/search_engine/: data_cleaner.py  embeddings.py  similarity_search.py  vector_store.py
JAY/shared/: config.py  models.py
JAY/tests/: conftest.py  test_embeddings.py  test_models.py
JAY/ui/: app.py
PRANAG-AI/JAY/: .env  README.md  pyproject.toml
PRANAG-AI/JAY/orchestrator/: output_validator.py  prompt_parser.py  research_fetcher.py  spec_builder.py  workflow.py
PRANAG-AI/JAY/search_engine/: __init__.py  data_cleaner.py  embeddings.py  similarity_search.py  vector_store.py
PRANAG-AI/JAY/shared/: __init__.py  config.py  models.py
PRANAG-AI/JAY/tests/: conftest.py  test_data_cleaner.py
PRANAG-AI/JAY/ui/: app.py
