[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-ai-pipeline"
version = "1.0.0"
description = "AI-powered crop specification pipeline"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.2",
    "chromadb>=0.4",
    "pandas>=2.0",
    "pyarrow>=13.0",
    "langgraph>=0.0.50",
    "langchain>=0.1.0",
    "requests>=2.31",
    "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.setuptools]
packages = ["JAY"]

[tool.setuptools.package-data]
JAY = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["JAY*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=JAY --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
