[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agri-ai-pipeline"
version = "1.0.0"
description = "AI-powered crop specification pipeline"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "orchestrator*", "search_engine*", "ui*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]
